# diopter

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  checker.py  main.py  mypy.ini  preprocessing.py  pyproject.toml  requirements.txt  requirements_hook.txt  setup.cfg  utils.py  vdiff.py  vrange_parser.py
.github/workflows/: lint-python.yaml
diopter/: __init__.py  __main__.py  bisector.py  builder.py  cbuilder.py  compiler.py  constant_globals.py  database.py  gcc_includes  generator.py  git.py  glibc_includes  parsetab.py  patchdatabase.py  patcher.py  preprocessor.py  reducer.py  reduction_checks.py  repository.py  sanitizer.py  utils.py  x86.py  x86_gas_directives.py  x86_mnemonics.py  x86_parser.py  x86_registers.py
diopter/ply/: LICENSE  lex.py  yacc.py
examples/: reduced_program_with_O3_smaller_than_Os.py
test/: reducer_test.py  test_constant_globals.py  test_preprocessed.py  test_x86.py
tests/: bisect_test.py  commands.txt  compilation_command_parsing_inputs.txt  compilation_command_parsing_test.py  compiler_serialization_test.py  compiler_test.py  csmith_test_source.c  parsing_test.py  preprocessor_test.py  reducer_test.py  sanitizer_test.py
