[metadata]
name = diopter
version = 0.0.17
author = Theodoros Theodoridis, Yann Girsberger
author_email = theodort@inf.ethz.ch
description = A library for building differential tests
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/diopter

classifiers =
    Programming Language :: Python :: 3



[options]
packages = find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    ccbuilder >= 0.0.9

[flake8]
max-line-length = 88
extend-ignore = E203
