[metadata]
name = diopter
version = 0.0.21
author = Theodoros Theodoridis, Yann Girsberger
author_email = theodort@inf.ethz.ch
description = A library for building differential tests
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
url = https://github.com/DeadCodeProductions/diopter

classifiers =
    Programming Language :: Python :: 3



[options]
packages = find:
python_requires = >= 3.10
include_package_data = True

[flake8]
max-line-length = 88
extend-ignore = E203

[options.package_data]
* = *.patch *.json

[options.entry_points]
console_scripts =
    ccbuilder = diopter:run_as_module
